increased padding on sections to make it work better with bg images. Fixed col sizing on about image so it breaks at md instead of sm

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,7 @@ body {
 
 .about-container {
     margin-top: 10px;
+    padding-bottom: 35px;
 }
 
 .about-heading {
@@ -115,7 +116,6 @@ body {
 /* Buttons */
 
 .button-cta {
-    font-weight: bold;
     border-radius: 23px;
     width: 160px;
     color:white;
